# sqredirect

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  setup.py
sqredirect/: redirect.c  redirect.py
src/: Makefile  README.md  dkms.conf  hooks.h  install.sh  sqproxy_redirect.c  uthash.h  utils.h
src-ebpf/: README.md  redirect.c  redirect.py  utils.h
tests/: conftest.py  test_argparse.py
